feat: 영양제 성분표 촬영·분석 파이프라인 완성, DUR 탭 통합, 약 추가·영양제 추천 플로우
## 1. 영양제 이미지 업로드 및 OCR 분석 (Case A)

### 프론트엔드
- [신규] pnn-app/src/api/ocr.ts: 영양제 이미지 OCR API 연동
  - 모바일: expo-file-system/legacy uploadAsync로 multipart 업로드 (FormData boundary 이슈 우회)
  - 웹: blob/data URL → fetch → File 변환 후 FormData 전송
- [신규] pnn-app/src/store/useDrugStore.ts: Zustand 스토어
  - interactionDrugs, interactionSupplements, recommendationDrugs 상태 관리
  - 영양제 최대 3개, Nutrient 타입(name, amount, unit)
- InteractionCheckScreen: 촬영/앨범 → OCR 분석 → Store 저장 → 비교 분석 버튼 연동
- 영양제 정보 요약 UI: "분석완료된 영양제 1/2/3" 제목, 성분명·용량·단위 리스트 표시
- "ai 모델이 인식 가능한 성분만 표시됩니다." 안내 문구 추가

### 백엔드
- SupplementOcrService: RestClient read timeout 90초, connect 10초 설정 (OCR+LLM 대기)
- build.gradle: reactivestreams 의존성 추가 (NoClassDefFoundError: Publisher 해결)
- application.properties: multipart max-file-size, max-request-size 10MB

### AI 서버
- supplement_recognition.py: Paddle OCR / Qwen 모델 분석 결과 터미널 로그 출력

## 2. 상호작용 비교 API (Scatter-Gather)

- InteractionCheckRequestDto: drugId → drugIds (다중 약품 지원)
- InteractionCheckService: N개 약 × M개 영양제 병렬 처리 (CompletableFuture)
- InteractionResultScreen: interactions 배열 기반 level별 스타일 렌더링

## 3. 약 상세 페이지 (DrugDetailScreen)

- DUR 탭: 병용금기·DUR 6종 통합, "DUR(의약품 안심 서비스)" 제목 하위 표시
- 빈 상태: "제품에 대한 DUR 지침이 존재하지 않습니다." 메시지
- 병용금기 3개씩 묶음, DUR 원료·경고문구 묶음, 구분선 적용
- InfoRow: noBorder prop 추가

## 4. 약 추가 버튼 및 sourceScreen 플로우

- DrugDetailScreen: sourceScreen이 InteractionCheck/Recommendation일 때 "약 추가" 버튼 표시
- Header: rightComponent prop 추가
- AppNavigator: DrugSearch, PillIdentify, DrugList, DrugDetail에 sourceScreen 파라미터
- DrugSearchScreen, PillIdentifyScreen, DrugListScreen: sourceScreen 릴레이

## 5. 영양제 추천 페이지 (RecommendationScreen)

- InteractionCheckScreen과 공통 레이아웃·컴포넌트 재사용
- recommendationDrugs 스토어 연동, sourceScreen: 'Recommendation' 전달

## 6. 스타일 및 컴포넌트

- InputScreenStyles.ts: InteractionCheckScreenStyles, RecommendationScreenStyles 통합
- InteractionCheckScreenStyles.ts, RecommendationScreenStyles.ts 삭제
- ActionCard: disa